# data-diode

./: .gitignore  8-way  Dockerfile  README.md  backup.service.sh  copy.nexus.sh  docker-compose.yml  env  envin  envun  firewall  harden  host.sh  incremental-backup.service  local.service.sh  mount  setup.sh  temp.service.sh  test.sh
docker-base/: Dockerfile  diode.service.sh  docker-compose.yml  setup.sh  test.sh
docker-base/machine/: service.sh
docs/: restricted-user.md
dyode-half-fiber/: README.md  config.yaml  dyode-in.service  dyode-out.service  dyode.py  dyode_in.py  dyode_out.py  manifest_diode_1.cfg  modbus.py  screen.py  udpcast_20120424_amd64.deb
dyode-half-fiber/data-diode.wiki/: Hardware.md  Home.md  Network-Configuration.md  Operation-and-Troubleshooting.md  Software.md
dyode-half-fiber/udpcast/: .gitignore  Makefile.flags  Makefile.in  cmd.html  cmd.html.man  config.h.in  configure  console.h  fec.c  fec.h  fifo.c  fifo.h  libbb_udpcast.h  log.c  log.h  participants.c  participants.h  rate-limit.c  rateGovernor.c  rateGovernor.h  receivedata.c  senddata.c  sender-diskio.c  socklib.c  statistics.c  statistics.h  threads.h  udp-receiver.h  udp-sender.c  udp-sender.h  udpc-protoc.h  udpc_version.c  udpcast.h  udpr-negotiate.c  udps-negotiate.c  util.h
dyode-half-fiber/udpcast-20120424/: .gitignore  COPYING  Changelog.txt  Config.in  Makefile  applets.h  auto-rate.c  auto-rate.h  buildMingw.sh  config.status  configure.in  console.c  console.h  fec-test.c  fec.c  fec.h  fifo.h  html2man.pl  log.c  log.h  participants.c  participants.h  process.c  produconsum.c  produconsum.h  rate-limit.c  rate-limit.h  rateGovernor.c  rateGovernor.h  receivedata.c  receiver-diskio.c  senddata.c  sender-diskio.c  socklib.c  socklib.h  statistics.c  statistics.h  threads.h  udp-receiver.c  udp-receiver.h  (+12 more)
dyode-half-fiber/udpcast-20120424/debian/: changelog  control  copyright
dyode-half-fiber/udpcast-20120424/examples/rateGovernor/: generatePacket.pl  ipe.c  sendPacket.pl
dyode-half-fiber/udpcast/examples/rateGovernor/: Makefile
input/: Dockerfile  service.sh
machine/: Dockerfile  service.sh
output/: Dockerfile  service.sh
service/: copy.nexus.sh  nexus-backup.service
setup/: setup-docker-ce.sh  setup-docker.sh  setup-dyode.sh  setup-ftps.sh  setup-nexus-oss.sh  setup-smb.sh  setup.sh  smb.conf  vsftpd.conf
udpcast/: .gitignore  Changelog.txt  Kbuild  Makefile.in  auto-rate.c  busyboxUsage  cmd.html  cmd.html.man  config.h  configure  configure.in  console.h  fifo.c  fifo.h  participants.c  participants.h  produconsum.h  rateGovernor.h  receivedata.c  sender-diskio.c  socklib.c  socklib.h  statistics.c  statistics.h  udp-receiver.c  udp-receiver.h  udp-receiver.txt  udp-redirect.c  udp-redirect.txt  udp-sender.c  udp-sender.txt  udpc-protoc.h  udpc_version.c  udpcast.c  udpcast.spec
udpcast/debian/: changelog  control
udpcast/examples/rateGovernor/: ipe.c
